[gd_scene load_steps=22 format=3 uid="uid://dw5exsao534ov"]

[ext_resource type="Script" path="res://Demos/TokenTransaction/account_manager.gd" id="1_ec6yk"]
[ext_resource type="FontFile" uid="uid://inxwmykjoa5p" path="res://Fonts/Circus Of Innocents.ttf" id="2_fegc0"]
[ext_resource type="Script" path="res://Demos/TokenTransaction/transaction_input_builder.gd" id="2_glow3"]
[ext_resource type="FontFile" uid="uid://djc4usmv5o2u5" path="res://Fonts/PUSSS___.TTF" id="3_jj56o"]
[ext_resource type="Texture2D" uid="uid://cye2pbirpht4u" path="res://Textures/b_green_pressed.PNG" id="5_y58ti"]
[ext_resource type="Texture2D" uid="uid://d4kauar2qc15y" path="res://Textures/b_green_hover.PNG" id="6_t7gjs"]
[ext_resource type="Texture2D" uid="uid://et1kvxp5bprg" path="res://Textures/b_inactive.PNG" id="7_wxbfo"]
[ext_resource type="Texture2D" uid="uid://dnqcw4msg2uow" path="res://Textures/b_orange_pressed.PNG" id="8_8lann"]
[ext_resource type="Texture2D" uid="uid://5erj253phx4s" path="res://Textures/b_orange_hover.PNG" id="9_6x6ua"]
[ext_resource type="Script" path="res://Scripts/scene_change_button.gd" id="10_wistj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7pi32"]
bg_color = Color(0.937255, 0.682353, 0.341176, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_hadpj"]
texture = ExtResource("5_y58ti")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_efb31"]
texture = ExtResource("6_t7gjs")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_bio0t"]
texture = ExtResource("5_y58ti")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_m8hje"]
texture = ExtResource("7_wxbfo")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_b04j3"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_bmrj2"]
texture = ExtResource("8_8lann")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ryjmu"]
texture = ExtResource("9_6x6ua")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_f2tob"]
texture = ExtResource("8_8lann")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_avkrb"]
texture = ExtResource("7_wxbfo")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0xvq3"]

[node name="TokenTransactionDemo" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="Panel" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
theme_override_styles/panel = SubResource("StyleBoxFlat_7pi32")

[node name="AccountPanel" type="Control" parent="."]
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 141.0
script = ExtResource("1_ec6yk")

[node name="AccountLabel" type="Label" parent="AccountPanel"]
layout_mode = 1
offset_left = 44.0
offset_top = 17.0
offset_right = 818.0
offset_bottom = 92.0
theme_override_fonts/font = ExtResource("2_fegc0")
theme_override_font_sizes/font_size = 60
text = "Wallet Address"

[node name="AccountAddress" type="Label" parent="AccountPanel"]
layout_mode = 1
offset_left = 67.0
offset_top = 89.0
offset_right = 841.0
offset_bottom = 129.0
theme_override_fonts/font = ExtResource("2_fegc0")
theme_override_font_sizes/font_size = 23
text = "84pL2GAuv8XGVPyZre2xcgUNSGz9csYHBt5AW4PUcEe9"

[node name="BalanceLabel" type="Label" parent="AccountPanel"]
layout_mode = 0
offset_left = 38.0
offset_top = 142.0
offset_right = 249.0
offset_bottom = 205.0
theme_override_fonts/font = ExtResource("2_fegc0")
theme_override_font_sizes/font_size = 50
text = "SOL Balance"

[node name="Balance" type="Label" parent="AccountPanel"]
layout_mode = 0
offset_left = 51.0
offset_top = 202.0
offset_right = 189.0
offset_bottom = 270.0
theme_override_fonts/font = ExtResource("3_jj56o")
theme_override_font_sizes/font_size = 55
text = "1.57"
vertical_alignment = 1

[node name="SolTransactionPanel" type="Control" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -288.0
offset_top = -507.0
offset_right = 288.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("2_glow3")

[node name="IntroText" type="Label" parent="SolTransactionPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -358.0
offset_top = -146.5
offset_right = 364.0
offset_bottom = -40.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_fegc0")
theme_override_font_sizes/font_size = 60
text = "Transfer SOL to desired address"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="ReceiverInputField" type="LineEdit" parent="SolTransactionPanel"]
layout_mode = 0
offset_left = 79.0
offset_top = 244.0
offset_right = 487.0
offset_bottom = 279.0
placeholder_text = "Receiver SOL Address..."

[node name="AmountInputField" type="LineEdit" parent="SolTransactionPanel"]
layout_mode = 0
offset_left = 79.0
offset_top = 294.71
offset_right = 487.0
offset_bottom = 329.71
placeholder_text = "Enter amount to send..."

[node name="SendButton" type="Button" parent="SolTransactionPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = 113.5
offset_right = 79.0
offset_bottom = 190.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_jj56o")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxTexture_hadpj")
theme_override_styles/hover = SubResource("StyleBoxTexture_efb31")
theme_override_styles/pressed = SubResource("StyleBoxTexture_bio0t")
theme_override_styles/disabled = SubResource("StyleBoxTexture_m8hje")
theme_override_styles/focus = SubResource("StyleBoxEmpty_b04j3")
text = "SEND"

[node name="ReturnButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 379.0
offset_top = -307.0
offset_right = 548.0
offset_bottom = -230.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_jj56o")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxTexture_bmrj2")
theme_override_styles/hover = SubResource("StyleBoxTexture_ryjmu")
theme_override_styles/pressed = SubResource("StyleBoxTexture_f2tob")
theme_override_styles/disabled = SubResource("StyleBoxTexture_avkrb")
theme_override_styles/focus = SubResource("StyleBoxEmpty_0xvq3")
text = "RETURN"
script = ExtResource("10_wistj")
path_to_scene = "res://Demos/DemoSelectScene.tscn"

[connection signal="text_changed" from="SolTransactionPanel/ReceiverInputField" to="SolTransactionPanel" method="_on_receiver_input_field_text_changed"]
[connection signal="text_changed" from="SolTransactionPanel/AmountInputField" to="SolTransactionPanel" method="_on_amount_input_field_text_changed"]
[connection signal="pressed" from="SolTransactionPanel/SendButton" to="SolTransactionPanel" method="_on_send_button_pressed"]
[connection signal="pressed" from="ReturnButton" to="ReturnButton" method="_on_pressed"]
